[package]
name = "ross"
version = "0.1.0"
authors = ["rikercolin"]
edition = "2018"
license-file = "README.md"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]

[dependencies]
bootloader = "0.9.8"
rlibc = "1.0.0"
volatile = "0.3.0"
spin = "0.5.2"
x86_64 = "0.11.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]