[package]
name = "ross"
version = "0.1.0"
authors = ["rikercolin"]
edition = "2018"
license-file = "README.md"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300 #Seconds

[dependencies]
bootloader = "0.9.8"
rlibc = "1.0.0"
volatile = "0.3.0"
spin = "0.5.2"
x86_64 = "0.11.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]